--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
 [dependencies]
 narm = { path = "../narm" }
 neutron-common = { path = "../neutron-common" }
+neutron-star = { path = "../neutron-star" } # TODO: Create a unified ABI helper library???
 ring = "0.16"
 num = "0.3"
 num-derive = "0.3"
